[package]
name = "bpf-compatible-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/eunomia-bpf/bpf-compatible"
description = "A library to build BPF-compatible binaries in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uname-rs = "0.1.1"
os-release = "0.1.0"
tar = "0.4.38"
tempfile = "3.5.0"
thiserror = "1.0.40"
