[package]
name = "bpf-compatible-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpf-compatible-rs = { path = "../bpf-compatible-rs", version = "0.1.3" }
inflate = "0.4.5"
libc = "0.2.144"
mkstemp-rs = "1.0.0"

[lib]
name = "bpf_compatible"
crate-type = ["cdylib", "staticlib"]

[profile.release]
opt-level = 3
lto = true
debug = 0
overflow-checks = false
